--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.1",
     "regenerator-runtime": "^0.13.7",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/webfontloader": "^1.6.32",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
